1- same js functions placed in michalwozniak.js 2- fixed tile auto height problem 3- img have correct size during resize screen 4- solved the problem that some div group-tile have a size of  numberx0 (overflow problem) 320 screen size response almost complete

--- a/css/metro.css
+++ b/css/metro.css
@@ -11339,7 +11339,7 @@ input[type="submit"].dropdown-toggle.drop-marker-light:after {
   .tile-area:not(.no-responsive-future) .tile-group {
     margin: 0 !important;
     padding: 0 !important;
-    float: none;
+    /*float: none;* /* ERROR this produce a window size for group of somegroupwidth X 0px  */
   }
   .tile-area:not(.no-responsive-future) .tile-group .tile-group-title {
     display: none;
