--- a/css/michalwozniak.css
+++ b/css/michalwozniak.css
@@ -8,7 +8,6 @@
     left: 100px;
 }
 
-
 .tile, .tile-small, .tile-square, .tile-wide, .tile-large, .tile-big, .tile-super {
     opacity: 0;
     -webkit-transform: scale(.8);
@@ -23,10 +22,9 @@
 }
 
 .charm.right-side {
-    width: 300px;
-    right: -300px;
+    width: 320px;
+    right: -320px;
 }
-
 
 @media screen and (max-width: 640px) {
     .tile-area {
@@ -41,14 +39,14 @@
         width: 320px;
     }
 
-    .tile.super-tile {
-        width: 150px;
-    }
-    .tile-group.four,
-    .tile-group.quadro {
+    .tile-group.triple {
         width: 320px;
     }
 
+    .tile.super-tile {
+        width: 150px;
+        height: auto;
+    }
 
 }
 
@@ -65,23 +63,32 @@
         width: 320px;
     }
 
+
+    .tile-large.HelloMsg{
+        height: 170px;
+    }
     .tile.super-tile {
         width: 150px;
+        height: auto;
     }
 
-    .tile-group.four,
-    .tile-group.quadro {
-        width: 320px;
+    .tile-super {
+        height: auto; /* text is smaller so it take less space*/
     }
 
+    .tile-group.double {
+        overflow: hidden; /*if some div contain bigger content than regular size tile overflow will occur */
+    }
 
 }
+
 /* used because there is a conflict with "icon" keyword between metro.css and simpleWeather.css  */
-.test {
+.UserIconFix {
     padding-left: 1rem;
     padding-right: 2.75rem;
 }
-.test1 {
+
+.UserIconFix1 {
     right: 0;
     left: auto !important;
 }
@@ -93,13 +100,16 @@
 .panel.lightTealPanel > .heading {
     background-color: #45fffd;
 }
-.panel.darkCrimsonPanel >.heading{
+
+.panel.darkCrimsonPanel > .heading {
     background-color: #640024;
 }
-.panel.lightGreenPanel >.heading{
+
+.panel.lightGreenPanel > .heading {
     background-color: #7ad61d;
 }
-.panel.lightBluePanel >.heading{
+
+.panel.lightBluePanel > .heading {
     background-color: #4390df;
 }
 
@@ -127,7 +137,10 @@
     color: #ffffff;
 }
 
-.input-control .Test111 textarea{
-    padding-top: 40px;
-    margin-top: 1000px;
+.tile-wide.AutoHeight{
+    height: auto;
+}
+
+.tile-square.AutoHeight{
+    height: auto;
 }
